[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_ni"
dist-name = "yaqd-ni"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["yaqd-core>=2021.3.0",
            "pydaqmx",
	    "numpy",
            "toml>=0.10.2",
	    ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaqd-ni"
Issues = "https://gitlab.com/yaq/yaqd-ni/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]
gui = ["pyqtgraph", "qtpy", "qtypes", "yaqc"]

[tool.flit.scripts]
yaqd-ni-daqmx-tmux = "yaqd_ni._ni_daqmx_tmux:NiDaqmxTmux.main"
yaqd-ni-daqmx-tmux-gui = "yaqd_ni._ni_daqmx_tmux_gui:main"

[tool.flit.entrypoints."yaqc_qtpy.main.ni_daqmx_tmux"]
ni_daqmx_tmux = "yaqd_ni._ni_daqmx_tmux_gui:ConfigWidget"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
