[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqg_ni"
dist-name = "yaqg-ni"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = [
    "yaqc",
    "pyqtgraph",
    "qtypes",
    "qtpy",
    "numpy",
    "tomli",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/yaq-project/yaqd-ni/"
Issues = "https://github.com/yaq-project/yaqd-ni/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-ni-daqmx-tmux-gui = "yaqg_ni._ni_daqmx_tmux_gui:main"

[tool.flit.entrypoints."yaqc_qtpy.main.ni_daqmx_tmux"]
ni_daqmx_tmux = "yaqg_ni._ni_daqmx_tmux_gui:ConfigWidget"

[tool.black]
line-length = 99
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
